--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "trading-bot",
   "version": "1.0.0",
   "scripts": {
-    "start": "ts-node main.ts",
+    "start": "ts-node src/main.ts",
     "build": "tsc"
   },
   "dependencies": {
     "@polymarket/clob-client": "^1.0.0",
-    "ethers": "^6.0.0",
-    "ws": "^8.13.0",
-    "csv-writer": "^1.6.0"
+    "csv-writer": "^1.6.0",
+    "ethers": "^5.8.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "ts-node": "^10.9.1",
