--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@polymarket/clob-client": "^1.0.0",
     "csv-writer": "^1.6.0",
     "ethers": "^5.8.0",
+    "tslib": "^2.8.1",
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@types/ws": "^8.18.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
