--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@polymarket/clob-client": "^1.0.0",
     "csv-writer": "^1.6.0",
     "ethers": "^5.8.0",
+    "axios": "^1.4.0",
     "tslib": "^2.8.1",
     "ws": "^8.13.0"
   },
