--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "dependencies": {
     "@polymarket/clob-client": "^1.0.0",
+    "axios": "^1.4.0",
     "csv-writer": "^1.6.0",
     "ethers": "^5.8.0",
-    "axios": "^1.4.0",
     "tslib": "^2.8.1",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "socks-proxy-agent": "^8.0.5"
   },
   "devDependencies": {
     "@types/ws": "^8.18.1",
